ejercicio dos JSP

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,16 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>hello</h1>
+     <h1>Index</h1>
+
+        <ul>
+            <li>
+                <a href="<%=request.getContextPath()%>/calcularValores.html.html">AGREGAR VALORES</a>
+            </li>
+            <li>
+                <a href="<%=request.getContextPath()%>/mostrar.html">Crear País</a>
+            </li>
+        </ul>
         
     </body>
 </html>
