ejercicio dos JSP

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
                 <a href="<%=request.getContextPath()%>/calcularValores.html.html">AGREGAR VALORES</a>
             </li>
             <li>
-                <a href="<%=request.getContextPath()%>/mostrar.html">Crear País</a>
+                <a href="<%=request.getContextPath()%>/mostrar.html">Ver Valor x1 , Valor x2 </a>
             </li>
         </ul>
         
