--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
 
         <ul>
             <li>
-                <a href="<%=request.getContextPath()%>/calcularValores.html.html">AGREGAR VALORES</a>
+                <a href="<%=request.getContextPath()%>/calcularValores.html">AGREGAR VALORES</a>
             </li>
             <li>
                 <a href="<%=request.getContextPath()%>/mostrar.html">Ver Valor x1 , Valor x2 </a>
