ejercicio dos JSP

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,10 +15,10 @@ and open the template in the editor.
 
         <ul>
             <li>
-                <a href="<%=request.getContextPath()%>/calcularValores.html">AGREGAR VALORES</a>
+                <a href="http://localhost:8080/ecuacionCuadratica/calcularValores.html">AGREGAR VALORES</a>
             </li>
             <li>
-                <a href="<%=request.getContextPath()%>/mostrar.html">Ver Valor x1 , Valor x2 </a>
+                <a href="http://localhost:8080/ecuacionCuadratica/mostrar.html">Ver Valor x1 , Valor x2 </a>
             </li>
         </ul>
         
